Fix crash in rasterize_and_record_micro benchmark

This is extracted from crrev.com/c/2459866.

Remove recording_source.UpdateDisplayItemList() which caused crash when
the same DisplayItemList is updated more than once. The call is not
necessary for the benchmark.

TBR=pdr@chromium.org,vmpstr@chromium.org

Bug: 922642
Change-Id: Iad8754bf82e6d51215bb0a2c7c18bd6f6904f5eb
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2462231
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#815849}